@@ -17,13 +17,7 @@ logger - GPLv3 - The RainbruRPG's stream-oriented multi-output logging
    Please update version and revision in configure.in
 
 * v0.0.0-4 (22 noc 2011 - ???) SLOC ??? FT ??:??
+- LoggerOutputYaml write logfile-version
+- log_reader checks if passed file exists
+- log_reader now reads argument file
 - All clases move to Rpg namespace
-
-* v0.0.0-3 (16 jul 2011 - 22 nov 2011) SLOC 916 FT 7:37
-- Doxygen documentation updated
-- Moved some Logger.hpp functions to implementation
-- Documentation update for some classes
-- Documentation added for some classes
-- configure checks for Boost.Program_options
-- All files ready for documentation (\file)
-
