@@ -1,3 +1,11 @@
+* v0.0.0-3 (16 jul 2011 - 22 nov 2011) SLOC 916 FT 7:37
+- Doxygen documentation updated
+- Moved some Logger.hpp functions to implementation
+- Documentation update for some classes
+- Documentation added for some classes
+- configure checks for Boost.Program_options
+- All files ready for documentation (\file)
+
 * v0.0.0-2 (24 jun 2011 - 16 jul 2011 SLOC 1,044 FT 4:47
 - Added main page to documentation
 - Moved some classes in their own sources
